# fastapi-template

./: .pre-commit-config.yaml  Dockerfile  pyproject.toml
app/: main.py
