[project]
name = "app"
version = "0.1.0"
description = ""
requires-python = ">=3.12, <4.0"
dependencies = [
    "fastapi[all]>=0.115.11",
]

[dependency-groups]
dev = [
  "bandit>=1.8.3",
  "mypy>=1.15.0",
  "pre-commit>=4.1.0",
  "pytest>=8.3.5",
  "ruff>=0.11.0",
]

[tool.ruff]
target-version = "py312"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"
